--- a/package.json
+++ b/package.json
@@ -13,13 +13,28 @@
     "dotenv": "^16.4.5",
     "next": "^14.2.2",
     "next-bunyan": "^0.0.1",
-    "next-compose-plugins": "^2.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/bunyan": "^1.8.11",
     "@types/node": "20.12.7",
     "@types/react": "18.2.79",
+    "@typescript-eslint/eslint-plugin": "^7.7.0",
+    "@typescript-eslint/parser": "^7.7.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.2",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.7.0",
+    "next-compose-plugins": "^2.2.1",
+    "prettier": "^3.2.5",
+    "ts-jest": "^29.1.2",
     "typescript": "5.4.5"
   }
 }
